--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
     - BASH_VAR=4.3
     - BASH_VAR=4.4
 before_script:
-  - docker build ./ -t kawazu_bash_$BASH_VAR
+  - docker build --build-arg bash_var=$BASH_VAR ./ -t kawazu_bash_$BASH_VAR
 script:
   - docker run --rm kawazu_bash_$BASH_VAR /tmp/kawazu/test/run_tests
   - docker run --rm kawazu_bash_$BASH_VAR /tmp/kawazu/test/shellcheck
